Fixed modal visibility

--- a/public/assets/stylesheets/edit.css
+++ b/public/assets/stylesheets/edit.css
@@ -93,6 +93,7 @@ nav {
 }
 
 .mask {
+	display: none;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -105,6 +106,7 @@ nav {
 }
 
 .modal {
+	display: none;
 	position: fixed;
 	top: 50%;
 	left: 50%;
@@ -118,7 +120,7 @@ nav {
 	box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.2);
 	z-index: 100;
 
-	opacity: 1;
+	/* opacity: 1; */
 
 	transition: 0.5s ease-out;
 
